# RepoSentry

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: findings.py  report.py
backend/app/routes/: __init__.py  analyze.py
backend/app/scanners/: base.py  dependencies.py  docker.py  git_hygiene.py  secrets.py
backend/app/services/: aggregator.py  coordinator.py
backend/app/utils/: crypto.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/dashboard/: FindingsTable.tsx  ScoreCard.tsx
frontend/src/hooks/: useScanMutation.ts
