[tool.poetry]
name = "backend"
version = "0.1.0"
description = "RepoSentry Automated Security Scanner"
authors = ["Ainee <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
pydantic = "*"
pydantic-settings = "*"
gitpython = "*"
uvicorn = {extras = ["standard"], version = "*"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
mypy = "*"